Fix: dropdown arrow too large on large screens

--- a/src/css/components/header-utility-menu.css
+++ b/src/css/components/header-utility-menu.css
@@ -17,7 +17,7 @@
   .header-utility-menu-icon {
     --button-x-padding: 0.75rem;
 
-    & svg {
+    > svg {
       width: 3rem;
       height: 3rem;
     }
